@@ -54,3 +54,4 @@ Version 1.16 Beta
 -----------------
 * Add preference to enable Facebook comments / set width of comment box.
 * Added short doc on how to configure Facebook comments.
+* Added selective cache clearance when an article is added/edited/deleted when module caching is on
